--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     * { box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
+      background-color: #f4f4f4;
       color: #222;
       display: flex;
       flex-direction: column;
@@ -20,14 +20,10 @@
       background-color: #ffffff;
       padding: 25px;
       border-radius: 18px;
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.06);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       max-width: 480px;
       width: 100%;
-      border: 1px solid #ddd;
-      transition: box-shadow 0.3s ease;
-    }
-    .container:hover {
-      box-shadow: 0 16px 28px rgba(0, 0, 0, 0.08);
+      border: 1px solid #ccc;
     }
     .logo-wrapper {
       display: flex;
@@ -37,11 +33,11 @@
     .logo {
       max-width: 120px;
       padding: 6px;
-      background-color: rgba(0, 0, 0, 0.04);
-      border-radius: 8px;
+      background-color: rgba(0, 0, 0, 0.05);
+      border-radius: 6px;
       transition: transform 0.3s ease;
     }
-    .logo:hover { transform: scale(1.05); }
+    .logo:hover { transform: scale(1.03); }
     h1 {
       font-size: 16px;
       color: #111;
@@ -53,7 +49,7 @@
       margin-top: 14px;
       margin-bottom: 6px;
       font-weight: bold;
-      color: #444;
+      color: #333;
       font-size: 14px;
     }
     .section { margin-bottom: 20px; }
@@ -64,25 +60,21 @@
       border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 14px;
-      background-color: #fcfcfc;
+      background-color: #fafafa;
       color: #000;
-      transition: border-color 0.25s, box-shadow 0.25s, background-color 0.25s;
+      transition: border-color 0.3s, box-shadow 0.3s;
+      resize: none;
     }
     .input-estilo:focus {
       border-color: #c62828;
-      background-color: #fff;
-      box-shadow: 0 0 5px rgba(198, 40, 40, 0.3);
+      box-shadow: 0 0 5px rgba(198, 40, 40, 0.4);
       outline: none;
     }
     .input-manual {
       background-color: #ffe5e5 !important;
     }
-    .input-error {
-      border-color: #d32f2f !important;
-      background-color: #ffeaea !important;
-    }
     .datetime-box {
-      background-color: #f3f3f3;
+      background-color: #f0f0f0;
       border: 1px solid #ccc;
       padding: 10px;
       text-align: center;
@@ -127,8 +119,8 @@
     }
     .btn:hover {
       background-color: #b71c1c;
-      transform: scale(1.02);
-      box-shadow: 0 0 10px rgba(198, 40, 40, 0.2);
+      transform: scale(1.03);
+      box-shadow: 0 0 12px rgba(255, 0, 0, 0.2);
     }
     .spinner {
       display: inline-block;
@@ -153,23 +145,143 @@
     <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
     <div class="datetime-box" id="datetime"></div>
 
-    <!-- [FORM SECTIONS SE MANTIENEN IGUALES] -->
-    <!-- MISMA LÓGICA, MISMO HTML, MISMO JS -->
-    <!-- Ya incluidos en tu código original -->
+    <div class="section">
+      <label for="rut-conductor">RUT del conductor:</label>
+      <input type="text" class="input-estilo" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ej: 12345678-9" />
+    </div>
 
-    <!-- Importante: NO se han añadido campos ni funcionalidades nuevas -->
+    <div class="section">
+      <label>Nombre conductor:</label>
+      <div class="input-estilo" id="datos-conductor"></div>
+    </div>
 
+    <div class="section" id="manual-conductor-section" style="display:none;">
+      <label for="nombre-manual">Ingrese nombre manualmente:</label>
+      <input type="text" class="input-estilo input-manual" id="nombre-manual" placeholder="Nombre del conductor" oninput="this.value = this.value.toUpperCase();" />
+    </div>
+
+    <div class="section">
+      <label for="numero-equipo">Número de equipo:</label>
+      <input type="text" class="input-estilo" id="numero-equipo" onblur="buscarDatosEquipo()" placeholder="Ej: 51125" />
+    </div>
+
+    <div class="section">
+      <label>Familia:</label>
+      <div class="input-estilo" id="familia-equipo"></div>
+    </div>
+
+    <div class="section">
+      <label>¿Habilitado para ingresar?</label>
+      <div class="input-estilo" id="status-equipo"></div>
+      <div class="alert-box alert-red" id="alerta-ingreso">
+        ❌ Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
+      </div>
+      <div class="alert-box alert-yellow" id="alerta-carga-extra">
+        ⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.
+      </div>
+    </div>
+
+    <div class="section">
+      <label>Observaciones:</label>
+      <div class="input-estilo" id="observaciones-equipo"></div>
+      <textarea class="input-estilo input-manual" id="observaciones-manual" placeholder="Escriba observaciones aquí." style="display:none; margin-top: 10px;" oninput="this.value = this.value.toUpperCase();"></textarea>
+    </div>
+
+    <div class="section">
+      <label for="guardia">Guardia fiscalizador:</label>
+      <input type="text" class="input-estilo" id="guardia" placeholder="Ingrese nombre del guardia." oninput="this.value = this.value.toUpperCase();" />
+    </div>
+
+    <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
   <script>
-    // Tu script original permanece exactamente igual
-    // Solo puedes mejorar visualmente validando campos aquí:
-    function marcarCamposFaltantes(campos) {
-      campos.forEach(id => {
-        const campo = document.getElementById(id);
-        campo.classList.add("input-error");
-        setTimeout(() => campo.classList.remove("input-error"), 2500);
-      });
+    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
+
+    function actualizarFechaHora() {
+      const now = new Date();
+      const dias = ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'];
+      const meses = ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'];
+      const diaSemana = dias[now.getDay()];
+      const dia = now.getDate();
+      const mes = meses[now.getMonth()];
+      const anio = now.getFullYear();
+      let hora = now.getHours();
+      const minutos = String(now.getMinutes()).padStart(2, '0');
+      const segundos = String(now.getSeconds()).padStart(2, '0');
+      const ampm = hora >= 12 ? 'P.M' : 'A.M';
+      hora = hora % 12 || 12;
+      const fechaFormateada = `${diaSemana}, ${dia} de ${mes} de ${anio}, ${hora}:${minutos}:${segundos} ${ampm}`;
+      document.getElementById("datetime").innerText = fechaFormateada;
+    }
+    setInterval(actualizarFechaHora, 1000);
+    actualizarFechaHora();
+
+    async function buscarDatosConductor() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const contenedor = document.getElementById("datos-conductor");
+      const manualSection = document.getElementById("manual-conductor-section");
+      if (!rut) {
+        contenedor.innerText = "";
+        manualSection.style.display = "none";
+        return;
+      }
+      contenedor.innerHTML = '<span class="spinner"></span>Buscando...';
+      try {
+        const response = await fetch(URL_GET + "?tipo=personal&id=" + encodeURIComponent(rut));
+        const data = await response.json();
+        if (data.error) {
+          contenedor.innerText = "❌ No encontrado.";
+          manualSection.style.display = "block";
+        } else {
+          contenedor.innerText = data.NOMBRE || "(sin nombre)";
+          manualSection.style.display = "none";
+        }
+      } catch {
+        contenedor.innerText = "❌ Error al buscar.";
+        manualSection.style.display = "block";
+      }
+    }
+
+    async function buscarDatosEquipo() {
+      const id = document.getElementById("numero-equipo").value.trim();
+      const familiaBox = document.getElementById("familia-equipo");
+      const statusBox = document.getElementById("status-equipo");
+      const obsBox = document.getElementById("observaciones-equipo");
+      const obsManual = document.getElementById("observaciones-manual");
+      const alerta = document.getElementById("alerta-ingreso");
+      const alertaAmarilla = document.getElementById("alerta-carga-extra");
+      if (!id) {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "";
+        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+        return;
+      }
+      const loading = '<span class="spinner"></span>Buscando...';
+      familiaBox.innerHTML = statusBox.innerHTML = obsBox.innerHTML = loading;
+      alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+      try {
+        const response = await fetch(URL_GET + "?tipo=equipo&id=" + encodeURIComponent(id));
+        const data = await response.json();
+        if (data.error) {
+          familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ No encontrado";
+        } else {
+          familiaBox.innerText = data.FAMILIA || "";
+          const status = (data["STATUS ✎"] || "").toLowerCase();
+          if (status === "operativo") {
+            statusBox.innerText = "❌ No habilitado.";
+            obsBox.innerText = "⚠️ Observaciones requeridas";
+            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "block";
+          } else {
+            statusBox.innerText = "✅ Habilitado.";
+            const observaciones = data.OBSERVACIONES?.trim();
+            obsBox.innerText = observaciones || "Equipo fuera de Operación, ya sea por inoperatividad o revisión en taller.";
+            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+          }
+        }
+      } catch {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ Error";
+        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
+      }
     }
 
     function enviarFormulario() {
@@ -184,15 +296,7 @@
         : document.getElementById("observaciones-equipo").innerText.trim();
       const guardia = document.getElementById("guardia").value.trim();
 
-      const camposFaltantes = [];
-      if (!rut) camposFaltantes.push("rut-conductor");
-      if (!nombre) camposFaltantes.push("nombre-manual");
-      if (!equipo) camposFaltantes.push("numero-equipo");
-      if (!guardia) camposFaltantes.push("guardia");
-      if (!observaciones && habilitado.includes("No habilitado")) camposFaltantes.push("observaciones-manual");
-
-      if (camposFaltantes.length > 0) {
-        marcarCamposFaltantes(camposFaltantes);
+      if (!rut || !nombre || !equipo || !guardia || (!observaciones && habilitado.includes("No habilitado"))) {
         alert("⚠️ Completa todos los campos obligatorios.");
         return;
       }
@@ -217,26 +321,6 @@
         console.error(error);
       });
     }
-
-    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
-    function actualizarFechaHora() {
-      const now = new Date();
-      const dias = ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'];
-      const meses = ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'];
-      const diaSemana = dias[now.getDay()];
-      const dia = now.getDate();
-      const mes = meses[now.getMonth()];
-      const anio = now.getFullYear();
-      let hora = now.getHours();
-      const minutos = String(now.getMinutes()).padStart(2, '0');
-      const segundos = String(now.getSeconds()).padStart(2, '0');
-      const ampm = hora >= 12 ? 'P.M' : 'A.M';
-      hora = hora % 12 || 12;
-      const fechaFormateada = `${diaSemana}, ${dia} de ${mes} de ${anio}, ${hora}:${minutos}:${segundos} ${ampm}`;
-      document.getElementById("datetime").innerText = fechaFormateada;
-    }
-    setInterval(actualizarFechaHora, 1000);
-    actualizarFechaHora();
   </script>
 </body>
 </html>
